# quadruped

./: Cargo.toml  package.xml
src/: drive.rs  main.rs  temp.rs
src/controller/: ik.rs  mod.rs  trot.rs
src/sensor/: mod.rs
